--- a/services/speiss-api/appsettings.json
+++ b/services/speiss-api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Uri": {
     "TleEndpoint": "http://celestrak.com/NORAD/elements/stations.txt",
-    "SatellitePassesEndpoint": "http://localhost:50051"
+    "EphemerisEndpoint": "http://localhost:50051"
   },
   "Constants": {
     "MaxMagnitude": 6.5,
