--- a/services/speiss-api/Makefile
+++ b/services/speiss-api/Makefile
@@ -1,4 +1,4 @@
 docker-build-amd64:
-	cp -r ../services/protos/ ./protos/
+	cp -r ../protos/ ./protos/
 	docker buildx build --platform linux/amd64 .
 	rm -rf ./protos
