--- a/services/speiss-api/SpeissApi.csproj
+++ b/services/speiss-api/SpeissApi.csproj
@@ -16,7 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="SGP.NET" Version="1.2.1" />
-    <Protobuf Include="..\services\protos\satellite_passes.proto" GrpcServices="Client" />
+    <Protobuf Include="..\protos\ephemeris.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
