--- a/helm/speiss-cluster/templates/cloudflared.yaml
+++ b/helm/speiss-cluster/templates/cloudflared.yaml
@@ -77,6 +77,6 @@ data:
 metadata:
   labels:
     app: {{ .Values.cloudflared.name }}
-  name: {{ .Values.cloudflared.name }}
+  name: {{ .Values.cloudflared.tunnelSecret.name }}
   namespace: {{ .Values.namespace }}
 type: Opaque
